Stage fixing of terraform generation